# login_api

./: .env.example  .gitignore  Cargo.toml  README.md  rustfmt.toml
migrations/2018-05-16-025352_users/: up.sql
migrations/2018-05-17-025458_auth_tokens/: down.sql  up.sql
migrations/2018-05-17-032037_auth_log/: down.sql  up.sql
migrations/2018-05-17-033232_fix_user_id/: down.sql  up.sql
migrations/2018-05-17-034309_auth_log_date/: down.sql  up.sql
migrations/2018-05-26-020911_Extend IP address column size/: down.sql  up.sql
migrations/2019-08-13-003150_update_user_id_bigserial/: down.sql  up.sql
migrations/2019-08-19-012433_user_date_modified/: down.sql  up.sql
src/: main.rs  routes.rs
src/dal/: auth.rs  mod.rs  schema.rs  users.rs
src/handlers/: user.rs
src/v1/: auth.rs  mod.rs  token.rs  user.rs
src/v1/models/: response.rs  token.rs  user.rs
