[package]
name = "login_api"
version = "0.1.1"
authors = ["Chris Williams <chrispwill@gmail.com>"]

[dependencies]
chrono = { version = "0.4.7", features = ["serde"] }
diesel = { version = "1.4.2", features = ["chrono", "postgres", "uuidv07"] }
dotenv = "0.14.1"
easy_password = "0.1.2"
jsonwebtoken = "6.0.1"
rouille = "3.0.0"
serde = "1.0.98"
serde_derive = "1.0.98"
uuid = { version = "0.7.4", features = ["v4"] }
validator = "0.9.0"
validator_derive = "0.9.0"
