[package]
name = "login_api"
version = "0.2.1"
authors = ["Chris Williams <chrispwill@gmail.com>"]

[dependencies]
base64 = "0.10.1"
chrono = { version = "0.4.7", features = ["serde"] }
diesel = { version = "1.4.2", features = ["chrono", "postgres"] }
dotenv = "0.14.1"
easy_password = "0.1.2"
jsonwebtoken = "6.0.1"
rand = "0.7.0"
rouille = "3.0.0"
serde = "1.0.98"
serde_derive = "1.0.98"
validator = "0.9.0"
validator_derive = "0.9.0"
